# Arghand

./: .gitignore  README.md
Arghand/: CMakeLists.txt
Arghand/cmake/: ArghandConfig.cmake  FindArghand.cmake
Arghand/include/: Arghand.h
Arghand/src/: Arghand.cpp
Tests/: CMakeLists.txt
Tests/src/: Test.cpp
scripts/: clear-builds.bat  create-package.bat  make-lib.bat  msvc.bat  run-tests.bat
